# testci

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp  testci.sln
testci/: main.cpp  testci.vcxproj
